# gnc_toolkit

./: .gitignore  CITATION.cff  README.md  conftest.py  egm2008.csv  gravity.py  pyproject.toml  two_body.py
.doctrees/: environment.pickle
.github/workflows/: ci.yml  docs.yml
cpp/: CMakeLists.txt
cpp/include/: ekf.hpp  kf.hpp  mekf.hpp
cpp/src/: ekf.cpp  kf.cpp
cpp/tests/: test_ekf.cpp  test_kf.cpp
docs/: conf.py  index.rst
src/actuators/: actuator.py  magnetorquer.py  reaction_wheel.py  thruster.py
src/disturbances/: drag.py  gravity.py  srp.py
src/environment/: density.py  mag_field.py  solar.py
src/gnc_toolkit/attitude_dynamics/: rigid_body.py
src/gnc_toolkit/guidance/: __init__.py  maneuvers.py  rendezvous.py
src/gnc_toolkit/optimal_control/: feedback_linearization.py  lqe.py  lqr.py  mpc.py  sliding_mode.py
src/kalman_filters/: __init__.py  ekf.py  kf.py  mekf.py  ukf.py
src/sensors/: gyroscope.py  magnetometer.py  sensor.py  star_tracker.py  sun_sensor.py
src/utils/: frame_conversion.py  quat_utils.py  state_conversion.py  state_to_elements.py  time_utils.py
tests/: test_attitude_dynamics.py  test_disturbances.py  test_gravity.py  test_guidance.py  test_optimal_control.py  test_propagators.py  test_sensors_actuators.py  test_two_body.py  verify_cpp_port.py
tests/environment_test/: test_density.py  test_magnetic_field.py
tests/filter_test/: test_ekf.py  test_kf.py  test_mekf.py  test_ukf.py  test_ukf_attitude.py
tests/util_test/: test_conversions.py  test_frames.py  test_quat_ops.py  test_state_transform.py  test_time_utils.py
(+4 files in other folders)
