[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnc_toolkit"
version = "0.1.0"
description = "A Guidance, Navigation, and Control toolkit for spacecraft."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Batuhan Akkova" },
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pymsis>=0.6.0",
    "ppigrf>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gnc_toolkit = ["*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
